Proper routing of tours and login

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -27,7 +27,7 @@
 						<li><a href="tours"><span>TOURS</span></a></li>
 						<li><a class="scroll" href="#wthreereviews"><span>REVIEWS</span></a></li>
 						<li><a class="scroll" href="#agilecontactw3ls"><span>CONTACT</span></a></li>
-						<li><a class="scroll" href="#agilecontactw3ls"><span>LOG IN</span></a></li>
+						<li><a href="users/login"><span>LOG IN</span></a></li>
 					</ul>
 				</nav>
 			</div>
