--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -108,6 +108,25 @@
     cursor: pointer;
 }
 
+.newbtn3 {
+    background-color: #337ab7;
+    border: none;
+    color: white;
+    padding: 5px 32px;
+    border-radius: 8px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin-top: 15px;
+    cursor: pointer;
+}
+
+.newbtn3:hover{
+   background-color: #31708f;
+   color: #FFF;
+}
+
  .newbtn:hover{
     background-color: #3e8e49;
 }
