--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -24,18 +24,24 @@
 						<li><a class="scroll" href="/#w3lsaboutaits"><span>ABOUT</span></a></li>
 						<li><a class="scroll" href="#wthreelocationsaits"><span>LOCATIONS</span></a></li>
 						<li><a class="scroll" href="#agilepackagesw3l"><span>PACKAGES</span></a></li>
-						<li><a href="tours"><span>TOURS</span></a></li>
+						<li><a href="/tours"><span>TOURS</span></a></li>
 						<li><a class="scroll" href="#wthreereviews"><span>REVIEWS</span></a></li>
 						<li><a class="scroll" href="#agilecontactw3ls"><span>CONTACT</span></a></li>
-						<li><a class="scroll" href="#agilecontactw3ls"><span>LOG IN</span></a></li>
+						<li><a href="login"><span>LOG IN</span></a></li>
 					</ul>
 				</nav>
 			</div>
 
             <!-- Login part -->
             <div class="col-sm-12">
-                <h1 id="myh1">Account Login</h1>
-                <hr style="width: 100%;">
+                <!-- <div style="display:inline"> -->
+                    <h1 style="display: inline-block; margin-right: 600px;" id="myh1">Account Login</h1>
+                    <h4 style="display: inline-block; " id="myh4">Do not have an account?</h4>
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <a href="/users/register" class="newbtn3">Register</a>
+
+                <!-- </div> -->
+                <hr style="width: 100%; margin-top: 0px;"/>
                 <form method="post" action="/users/login">
                   <div class="form-group">
                     <h4 id="myh4">Username</h3>
@@ -55,7 +61,7 @@
     <!-- Slider -->
     <ul class="rslides" id="slider">
         <li class="first-slide w3ls">
-            <img src="/images/slide-4.jpg" alt="TravelPedia">
+            <img src="/images/slide-2.jpg" alt="TravelPedia">
             <div class="wthreexperience">
                 <!-- <div id="animated-example" class="animated fadeIn"></div> -->
                 <!-- <button onclick="myFunction()">Reload page</button> -->
