--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -24,10 +24,10 @@
 						<li><a class="scroll" href="/#w3lsaboutaits"><span>ABOUT</span></a></li>
 						<li><a class="scroll" href="#wthreelocationsaits"><span>LOCATIONS</span></a></li>
 						<li><a class="scroll" href="#agilepackagesw3l"><span>PACKAGES</span></a></li>
-						<li><a href="tours"><span>TOURS</span></a></li>
+						<li><a href="/tours"><span>TOURS</span></a></li>
 						<li><a class="scroll" href="#wthreereviews"><span>REVIEWS</span></a></li>
 						<li><a class="scroll" href="#agilecontactw3ls"><span>CONTACT</span></a></li>
-						<li><a class="scroll" href="#agilecontactw3ls"><span>LOG IN</span></a></li>
+						<li><a href="login"><span>LOG IN</span></a></li>
 					</ul>
 				</nav>
 			</div>
@@ -35,7 +35,7 @@
             <!-- Register part -->
             <div class="col-sm-12">
                 <h1 id="myh1">Register</h1>
-                <hr>
+                <hr style="width: 100%; margin-top: 5px;"/>
                 {{#if errors}}
                       {{#each errors}}
                         <div class="alert alert-danger">{{msg}}</div>
@@ -72,7 +72,7 @@
     <!-- Slider -->
     <ul class="rslides" id="slider">
         <li class="first-slide w3ls">
-            <img src="/images/slide-4.jpg" alt="TravelPedia">
+            <img src="/images/slide-5.jpg" alt="TravelPedia">
             <div class="wthreexperience">
                 <!-- <div id="animated-example" class="animated fadeIn"></div> -->
                 <!-- <button onclick="myFunction()">Reload page</button> -->
