--- a/views/tours.handlebars
+++ b/views/tours.handlebars
@@ -13,7 +13,7 @@
 				</button>
 				<div class="w3_navigation_pos">
 					<a href="/">
-						<img src="images/logo.png" alt="TravelPedia">
+						<img src="/images/logo.png" alt="TravelPedia">
 						<h1 style="font-size:40px; font-weight:bold;">TravelPedia</h1>
 					</a>
 				</div>
@@ -25,17 +25,17 @@
 						<li><a class="scroll" href="/#w3lsaboutaits"><span>ABOUT</span></a></li>
 						<li><a class="scroll" href="#wthreelocationsaits"><span>LOCATIONS</span></a></li>
 						<li><a class="scroll" href="#agilepackagesw3l"><span>PACKAGES</span></a></li>
-						<li><a href="tours"><span>TOURS</span></a></li>
+						<li><a href="/tours"><span>TOURS</span></a></li>
 						<li><a class="scroll" href="#wthreereviews"><span>REVIEWS</span></a></li>
 						<li><a class="scroll" href="#agilecontactw3ls"><span>CONTACT</span></a></li>
-						<li><a class="scroll" href="#agilecontactw3ls"><span>LOG IN</span></a></li>
+						<li><a href="users/login"><span>LOG IN</span></a></li>
 					</ul>
 				</nav>
 			</div>
 
             <!-- search table -->
             <div>
-                <h1 id="myh1">Search Tours</h1>
+                <h1 id="myh1" style="margin-left: 28px;">Search Tours</h1>
                 <form action="http://127.0.0.1:3000/" method="post">
                     <input style="border-radius: 8px;" type="text" list="destinations" id="myInput" placeholder="Destination" title="Type in a Place">
                     <datalist id="destinations">
@@ -83,7 +83,7 @@
     <!-- Slider -->
         <ul class="rslides" id="slider">
             <li class="first-slide w3ls">
-                <img src="images/slide-4.jpg" alt="TravelPedia">
+                <img src="/images/slide-4.jpg" alt="TravelPedia">
                 <div class="wthreexperience">
                     <!-- <div id="animated-example" class="animated fadeIn"></div> -->
                     <!-- <button onclick="myFunction()">Reload page</button> -->
