--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -33,7 +33,7 @@
 			</div>
 
             <!-- Register part -->
-            <div class="col-sm-12">
+            <div class="container">
                 <h1 id="myh1">Register</h1>
                 <hr style="width: 100%; margin-top: 5px;"/>
                 {{#if errors}}
@@ -41,6 +41,23 @@
                         <div class="alert alert-danger">{{msg}}</div>
                       {{/each}}
                 {{/if}}
+                <!-- checking for flash message -->
+                <div class="row">
+                    <div class="col-lg-12">
+                      {{#if success_msg}}
+                      <div class="alert alert-success" style="width: 30%;">{{success_msg}}</div>
+                      {{/if}}
+
+                      {{#if error_msg}}
+                        <div class="alert alert-danger" style="width: 30%;">{{error_msg}}</div>
+                      {{/if}}
+
+                      {{#if error}}
+                        <div class="alert alert-danger" style="width: 30%;">{{error}}</div>
+                      {{/if}}
+                    </div>
+                </div>
+                <!-- //end -->
                 <form method="post" action="/users/register">
                    <div>
                     <h4 id="myh4">Name</h4>
