--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,70 +2,18 @@
 <div class="col-sm-12 agileheader" id="agileitshome">
 	<!-- Navigation -->
 	<div class="w3lsnavigation">
-		<nav class="navbar navbar-default agilehovereffect">
-			<div class="navbar-header navbar-left">
-				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-					<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
-				<div class="w3_navigation_pos">
-					<a href="/">
-						<img src="images/logo.png" alt="TravelPedia">
-						<h1 style="font-size:40px; font-weight:bold;">TravelPedia</h1>
-					</a>
-				</div>
-			</div>
 
-			<div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
-				<nav class="link-effect-2 wthreehovereffect" id="link-effect-2">
-					<ul class="nav navbar-nav">
-						<li><a class="scroll" href="#w3lsaboutaits"><span>ABOUT</span></a></li>
-						<li><a class="scroll" href="#wthreelocationsaits"><span>LOCATIONS</span></a></li>
-						<li><a class="scroll" href="#agilepackagesw3l"><span>PACKAGES</span></a></li>
-						<li><a href="tours"><span>TOURS</span></a></li>
-						<li><a class="scroll" href="#wthreereviews"><span>REVIEWS</span></a></li>
-						<li><a class="scroll" href="#agilecontactw3ls"><span>CONTACT</span></a></li>
-						{{#if user}}
-						<li><a href="users/logout"><span>LOG OUT</span></a></li>
-						{{else}}
-						<li><a href="users/login"><span>LOG IN</span></a></li>
-						{{/if}}
-					</ul>
-				</nav>
-			</div>
-		</nav>
-	<!-- //Navigation -->
 
-    <!-- Slider -->
+    <!-- Background image -->
         <ul class="rslides" id="slider">
             <li class="first-slide w3ls">
                 <img src="images/slide-1.jpg" alt="TravelPedia">
                 <div class="wthreexperience">
-
-					<!-- checking for flash message -->
-
-				    {{#if success_msg}}
-				    <div class="alert alert-success" style="width: 20%;">{{success_msg}}</div>
-				    {{/if}}
-
-				    {{#if error_msg}}
-					<div class="alert alert-danger" style="width: 20%;">{{error_msg}}</div>
-				    {{/if}}
-
-				    {{#if error}}
-					<div class="alert alert-danger" style="width: 20%;">{{error}}</div>
-				    {{/if}}
-
-					<!-- //end -->
-
                     <div id="animated-example" class="animated fadeIn"></div>
-                    <!-- <button onclick="myFunction()">Reload page</button> -->
                 </div>
             </li>
         </ul>
-    <!-- //Slider -->
+    <!-- //background image -->
 
 	<!-- About -->
 	<div class="w3lsaboutaits" id="w3lsaboutaits">
