--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -143,8 +143,43 @@
 
 <!-- Body -->
 <body>
-
     <div class="row" >
+
+        <nav class="navbar navbar-default agilehovereffect">
+			<div class="navbar-header navbar-left">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+			</div>
+
+			<div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1" style="margin-left:40px;">
+				<nav class="link-effect-2 wthreehovereffect" id="link-effect-2">
+					<ul class="nav navbar-nav">
+						<li><a class="scroll" href="#w3lsaboutaits"><span>ABOUT</span></a></li>
+						<li><a class="scroll" href="#wthreelocationsaits"><span>LOCATIONS</span></a></li>
+						<li><a class="scroll" href="#agilepackagesw3l"><span>PACKAGES</span></a></li>
+						<div class="w3_navigation_pos">
+							<a href="/">
+								<img src="/images/logo.png" alt="TravelPedia">
+								<h1 style="font-size:40px; font-weight:bold;">TravelPedia</h1>
+							</a>
+						</div>
+						<li><a href="/tours"><span>TOURS</span></a></li>
+						<li><a class="scroll" href="#wthreereviews"><span>REVIEWS</span></a></li>
+						<li><a class="scroll" href="#agilecontactw3ls"><span>CONTACT</span></a></li>
+						{{#if user}}
+						<li><a href="/users/logout"><span>LOG OUT</span></a></li>
+						{{else}}
+						<li><a href="/users/login"><span>LOG IN</span></a></li>
+						{{/if}}
+					</ul>
+				</nav>
+			</div>
+		</nav>
+
         {{{body}}}
     </div>
 
