--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,98 +1,62 @@
 <!-- Header -->
 <div class="col-sm-12 agileheader" id="agileitshome">
-	<!-- Navigation -->
-	<div class="w3lsnavigation">
-		<nav class="navbar navbar-default agilehovereffect">
-			<div class="navbar-header navbar-left">
-				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-					<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
-				<div class="w3_navigation_pos" id="logopos" >
-					<a href="/">
-						<img src="/images/logo.png" alt="TravelPedia">
-						<h1 style="font-size:40px; font-weight:bold;">TravelPedia</h1>
-					</a>
-				</div>
-			</div>
-
-			<div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
-				<nav class="link-effect-2 wthreehovereffect" id="link-effect-2">
-					<ul class="nav navbar-nav">
-						<li><a class="scroll" href="/#w3lsaboutaits"><span>ABOUT</span></a></li>
-						<li><a class="scroll" href="#wthreelocationsaits"><span>LOCATIONS</span></a></li>
-						<li><a class="scroll" href="#agilepackagesw3l"><span>PACKAGES</span></a></li>
-						<li><a href="/tours"><span>TOURS</span></a></li>
-						<li><a class="scroll" href="#wthreereviews"><span>REVIEWS</span></a></li>
-						<li><a class="scroll" href="#agilecontactw3ls"><span>CONTACT</span></a></li>
-						<li><a href="login"><span>LOG IN</span></a></li>
-					</ul>
-				</nav>
-			</div>
-
-            <!-- Register part -->
-            <div class="container">
-                <h1 id="myh1">Register</h1>
-                <hr style="width: 100%; margin-top: 5px;"/>
-                {{#if errors}}
-                      {{#each errors}}
-                        <div class="alert alert-danger">{{msg}}</div>
-                      {{/each}}
-                {{/if}}
-                <!-- checking for flash message -->
-                <div class="row">
-                    <div class="col-lg-12">
-                      {{#if success_msg}}
-                      <div class="alert alert-success" style="width: 30%;">{{success_msg}}</div>
-                      {{/if}}
-
-                      {{#if error_msg}}
-                        <div class="alert alert-danger" style="width: 30%;">{{error_msg}}</div>
-                      {{/if}}
-
-                      {{#if error}}
-                        <div class="alert alert-danger" style="width: 30%;">{{error}}</div>
-                      {{/if}}
-                    </div>
-                </div>
-                <!-- //end -->
-                <form method="post" action="/users/register">
-                   <div>
-                    <h4 id="myh4">Name</h4>
-                    <input style="width:20%;" type="text" class="form-control" placeholder="Name" name="name">
-                  <!-- </div> -->
-                  <!-- <div class="form-group"> -->
-                    <h4 id="myh4">Username</h4>
-                    <input style="width:20%;" type="text" class="form-control" placeholder="Username" name="username">
-                  <!-- </div> -->
-                   <!-- <div class="form-group"> -->
-                    <h4 id="myh4">Email</h4>
-                    <input style="width:20%;" type="email" class="form-control" placeholder="Email" name="email">
-                  <!-- </div> -->
-                  <!-- <div class="form-group"> -->
-                    <h4 id="myh4">Password</h4>
-                    <input style="width:20%;" type="password" class="form-control" placeholder="Password" name="password">
-                  <!-- </div> -->
-                  <!-- <div class="form-group"> -->
-                    <h4 id="myh4">Confirm Password</h4>
-                    <input style="width:20%;" type="password" class="form-control" placeholder="Password" name="password2">
-                  </div>
-                  <button style="margin-top: 25px;" type="submit" class="newbtn2">Submit</button>
-                </form>
-                <!-- //end -->
-            </div>
-        </nav>
-    </div>
 
     <!-- Slider -->
     <ul class="rslides" id="slider">
         <li class="first-slide w3ls">
             <img src="/images/slide-5.jpg" alt="TravelPedia">
             <div class="wthreexperience">
-                <!-- <div id="animated-example" class="animated fadeIn"></div> -->
-                <!-- <button onclick="myFunction()">Reload page</button> -->
+				<!-- Register part -->
+	            <div class="container" style="position: absolute; margin-top: 150px; margin-left: -150px;">
+	                <h1 id="myh1">Register</h1>
+	                <hr style="width: 100%; margin-top: 5px;"/>
+	                {{#if errors}}
+	                      {{#each errors}}
+	                        <div class="alert alert-danger">{{msg}}</div>
+	                      {{/each}}
+	                {{/if}}
+	                <!-- checking for flash message -->
+	                <div class="row">
+	                    <div class="col-lg-12">
+	                      {{#if success_msg}}
+	                      <div class="alert alert-success" style="width: 30%;">{{success_msg}}</div>
+	                      {{/if}}
+
+	                      {{#if error_msg}}
+	                        <div class="alert alert-danger" style="width: 30%;">{{error_msg}}</div>
+	                      {{/if}}
+
+	                      {{#if error}}
+	                        <div class="alert alert-danger" style="width: 30%;">{{error}}</div>
+	                      {{/if}}
+	                    </div>
+	                </div>
+	                <!-- //end -->
+	                <form method="post" action="/users/register">
+	                   <div>
+	                    <h4 id="myh4">Name</h4>
+	                    <input style="width:20%;" type="text" class="form-control" placeholder="Name" name="name">
+	                  <!-- </div> -->
+	                  <!-- <div class="form-group"> -->
+	                    <h4 id="myh4">Username</h4>
+	                    <input style="width:20%;" type="text" class="form-control" placeholder="Username" name="username">
+	                  <!-- </div> -->
+	                   <!-- <div class="form-group"> -->
+	                    <h4 id="myh4">Email</h4>
+	                    <input style="width:20%;" type="email" class="form-control" placeholder="Email" name="email">
+	                  <!-- </div> -->
+	                  <!-- <div class="form-group"> -->
+	                    <h4 id="myh4">Password</h4>
+	                    <input style="width:20%;" type="password" class="form-control" placeholder="Password" name="password">
+	                  <!-- </div> -->
+	                  <!-- <div class="form-group"> -->
+	                    <h4 id="myh4">Confirm Password</h4>
+	                    <input style="width:20%;" type="password" class="form-control" placeholder="Password" name="password2">
+	                  </div>
+	                  <button style="margin-top: 25px;" type="submit" class="newbtn2">Submit</button>
+	                </form>
+	                <!-- //end -->
+	            </div>
             </div>
         </li>
     </ul>
