--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,10 +1,6 @@
-<!-- Header -->
-<div class="col-sm-12 agileheader" id="agileitshome">
-	<!-- Navigation -->
-	<div class="w3lsnavigation">
-
 
     <!-- Background image -->
+	<div class="slider">
         <ul class="rslides" id="slider">
             <li class="first-slide w3ls">
                 <img src="images/slide-1.jpg" alt="TravelPedia">
@@ -13,27 +9,43 @@
                 </div>
             </li>
         </ul>
+	</div>
     <!-- //background image -->
 
 	<!-- About -->
 	<div class="w3lsaboutaits" id="w3lsaboutaits">
 		<div class="container">
 
-			<h2>About Our Agency</h2>
-			<h4>"There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pain..."</h4>
+			<h2>About Our Firm</h2>
+			<h4>"Travel the Experience"</h4>
 			<div class="w3lsaboutaits-grids">
 				<div class="col-md-6 w3lsaboutaits-grid w3lsaboutaits-grid-1">
-					<h3>The Lorem Ipsum</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+					<h3>Company Overview</h3>
+					<p>TRAVELPEDIA is a company of trusted, passionate travel specialists who create customized
+						luxury journeys to inspiring destinations. Our trips are completely based around your interests
+						and schedule—they are one-of-a-kind experiences that are as unique as you are. Our expertise, knowledge,
+						and personal relationships allow us to design journeys that are rugged and adventurous, urban and
+						ultra-sophisticated, or the perfect blend of both. Whichever you prefer, you can be certain that
+						your trip will be filled with exclusive opportunities that only we offer.</p>
 					<button class="btn btn-primary" data-toggle="modal" data-target="#myModal1">READ MORE<i class="fa fa-arrow-right" aria-hidden="true"></i></button>
 				</div>
 				<div class="col-md-6 w3lsaboutaits-grid w3lsaboutaits-grid-2">
-					<h3>Dolores Amet Elit <span><i class="fa fa-angle-right" aria-hidden="true"></i></span></h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-					<h3>Ad Minim Veniam <span><i class="fa fa-angle-right" aria-hidden="true"></i></span></h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-					<h3>Ea Commodo Consequat <span><i class="fa fa-angle-right" aria-hidden="true"></i></span></h3>
-					<p class="bottom-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+					<h3>Why TravelPedia? <span><i class="fa fa-angle-right" aria-hidden="true"></i></span></h3>
+					<p> TRAVELPEDIA extensive global network of insiders and experts allows us to create
+						the trip you’ve been dreaming about. We also
+						provide facility to chat with other people on same tour.We have more knowledge,
+						relationships, and expertise than anyone in the industry,
+						and we use it create one-of-a-kind journeys and experiences that you will cherish for
+						a lifetime.</p>
+					<h3>Our Commitment <span><i class="fa fa-angle-right" aria-hidden="true"></i></span></h3>
+					<p>TRAVELPEDIA Travel is not only committed to providing you with an unforgettable and inspiring
+						 trip, we’re also committed to ensuring your happiness and comfort throughout.
+						 When you travel with us, you can feel confident knowing we have staff in every country who
+						  are available to accommodate your wishes and needs. </p>
+					<h3>We know your comfort<span><i class="fa fa-angle-right" aria-hidden="true"></i></span></h3>
+					<p class="bottom-p">From the moment you pick up the phone to after you return home,
+						Travelpedia Travel ensures that your journey is seamless, authentic, and beyond what you
+						had imagined.</p>
 				</div>
 				<div class="clearfix"></div>
 			</div> -->
@@ -45,11 +57,17 @@
 						<div class="modal-content">
 							<div class="modal-header">
 								<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-								<h4 class="modal-title">The Lorem Ipsum Dolores</h4>
+								<h4 class="modal-title">Why us?</h4>
 							</div>
 							<div class="modal-body">
 								<img src="images/about.jpg" alt="TravelPedia">
-								<p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+								<p>
+								Want to make sushi in Japan with a legendary chef? Go heli-skiing in
+								Patagonia after a snowfall? How about jam with local musicians in Senegal,
+								or have an island in the South Pacific all to yourself? We can make it happen.
+								We can also arrange for you to travel through countries by boat, horse,
+								or private jet, and can have you sleeping in a room on the top floor of Dubai’s
+								 most luxurious hotel or in Mongolia’s most remote ger. </p>
 							</div>
 						</div>
 					</div>
