--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,50 +1,50 @@
-<!-- Header -->
-<div class="col-sm-12 agileheader" id="agileitshome">
 
     <!-- Slider -->
-    <ul class="rslides" id="slider">
-        <li class="first-slide w3ls">
-            <img src="/images/slide-2.jpg" alt="TravelPedia">
-            <div class="wthreexperience">
-				<!-- Login part -->
-	            <div class="container" style="position: absolute; margin-top: 150px; margin-left: -150px;">
-	                <h1 style="display: inline-block; margin-right: 480px;" id="myh1">Account Login</h1>
-	                <h4 style="display: inline-block; " id="myh4">Do not have an account?</h4>
-	                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-	                <a href="/users/register" class="newbtn3">Register</a>
-	                <hr style="width: 100%; margin-top: 0px;"/>
+    <div class="slider">
+        <ul class="rslides" id="slider">
+            <li class="first-slide w3ls">
+                <img src="/images/slide-2.jpg" alt="TravelPedia">
+                <div class="wthreexperience">
+    				<!-- Login part -->
+    	            <div class="container" style="position: absolute; margin-top: 150px; margin-left: -150px;">
+    	                <h1 style="display: inline-block; margin-right: 480px;" id="myh1">Account Login</h1>
+    	                <h4 style="display: inline-block; " id="myh4">Do not have an account?</h4>
+    	                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    	                <a href="/users/register" class="newbtn3">Register</a>
+    	                <hr style="width: 100%; margin-top: 0px;"/>
 
-	                <!-- checing for flash message -->
+    	                <!-- checking for flash message -->
 
-	                  {{#if success_msg}}
-	                  <div class="alert alert-success" style="width: 30%;">{{success_msg}}</div>
-	                  {{/if}}
+    	                  {{#if success_msg}}
+    	                  <div class="alert alert-success" style="width: 30%;">{{success_msg}}</div>
+    	                  {{/if}}
 
-	                  {{#if error_msg}}
-	                    <div class="alert alert-danger" style="width: 30%;">{{error_msg}}</div>
-	                  {{/if}}
+    	                  {{#if error_msg}}
+    	                    <div class="alert alert-danger" style="width: 30%;">{{error_msg}}</div>
+    	                  {{/if}}
 
-	                  {{#if error}}
-	                    <div class="alert alert-danger" style="width: 30%;">{{error}}</div>
-	                  {{/if}}
+    	                  {{#if error}}
+    	                    <div class="alert alert-danger" style="width: 30%;">{{error}}</div>
+    	                  {{/if}}
 
-	                <!-- //end -->
+    	                <!-- //end -->
 
-	                <form method="post" action="/users/login">
-	                  <div class="form-group">
-	                    <h4 id="myh4">Username</h3>
-	                    <input style="width:20%;" type="text" class="form-control" name="username" placeholder="Username">
-	                  </div>
-	                  <div class="form-group">
-	                    <h4 id="myh4">Password</h4>
-	                    <input style="width:20%;" type="password" class="form-control" name="password" placeholder="Password">
-	                  </div>
-	                  <button type="submit" class="newbtn2">Submit</button>
-	                </form>
-	            </div>
-                <!-- <div id="animated-example" class="animated fadeIn"></div> -->
-            </div>
-        </li>
-    </ul>
+    	                <form method="post" action="/users/login">
+    	                  <div class="form-group">
+    	                    <h4 id="myh4">Username</h3>
+    	                    <input style="width:20%;" type="text" class="form-control" name="username" placeholder="Username">
+    	                  </div>
+    	                  <div class="form-group">
+    	                    <h4 id="myh4">Password</h4>
+    	                    <input style="width:20%;" type="password" class="form-control" name="password" placeholder="Password">
+    	                  </div>
+    	                  <button type="submit" class="newbtn2">Submit</button>
+    	                </form>
+    	            </div>
+                    <!-- <div id="animated-example" class="animated fadeIn"></div> -->
+                </div>
+            </li>
+        </ul>
+    </div>
     <!-- //Slider -->
 </div>
