--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,64 +1,63 @@
-<!-- Header -->
-<div class="col-sm-12 agileheader" id="agileitshome">
 
-    <!-- Slider -->
-    <ul class="rslides" id="slider">
-        <li class="first-slide w3ls">
-            <img src="/images/slide-5.jpg" alt="TravelPedia">
-            <div class="wthreexperience">
-				<!-- Register part -->
-	            <div class="container" style="position: absolute; margin-top: 150px; margin-left: -150px;">
-	                <h1 id="myh1">Register</h1>
-	                <hr style="width: 100%; margin-top: 5px;"/>
-	                {{#if errors}}
-	                      {{#each errors}}
-	                        <div class="alert alert-danger">{{msg}}</div>
-	                      {{/each}}
-	                {{/if}}
-	                <!-- checking for flash message -->
-	                <div class="row">
-	                    <div class="col-lg-12">
-	                      {{#if success_msg}}
-	                      <div class="alert alert-success" style="width: 30%;">{{success_msg}}</div>
-	                      {{/if}}
+    <div class="slider">
+        <ul class="rslides" id="slider">
+            <li class="first-slide w3ls">
+                <img src="/images/slide-5.jpg" alt="TravelPedia">
+                <div class="wthreexperience">
+    				<!-- Register part -->
+    	            <div class="container" style="position: absolute; margin-top: 150px; margin-left: -150px;">
+    	                <h1 id="myh1">Register</h1>
+    	                <hr style="width: 100%; margin-top: 5px;"/>
+    	                {{#if errors}}
+    	                      {{#each errors}}
+    	                        <div class="alert alert-danger">{{msg}}</div>
+    	                      {{/each}}
+    	                {{/if}}
+    	                <!-- checking for flash message -->
+    	                <div class="row">
+    	                    <div class="col-lg-12">
+    	                      {{#if success_msg}}
+    	                      <div class="alert alert-success" style="width: 30%;">{{success_msg}}</div>
+    	                      {{/if}}
 
-	                      {{#if error_msg}}
-	                        <div class="alert alert-danger" style="width: 30%;">{{error_msg}}</div>
-	                      {{/if}}
+    	                      {{#if error_msg}}
+    	                        <div class="alert alert-danger" style="width: 30%;">{{error_msg}}</div>
+    	                      {{/if}}
 
-	                      {{#if error}}
-	                        <div class="alert alert-danger" style="width: 30%;">{{error}}</div>
-	                      {{/if}}
-	                    </div>
-	                </div>
-	                <!-- //end -->
-	                <form method="post" action="/users/register">
-	                   <div>
-	                    <h4 id="myh4">Name</h4>
-	                    <input style="width:20%;" type="text" class="form-control" placeholder="Name" name="name">
-	                  <!-- </div> -->
-	                  <!-- <div class="form-group"> -->
-	                    <h4 id="myh4">Username</h4>
-	                    <input style="width:20%;" type="text" class="form-control" placeholder="Username" name="username">
-	                  <!-- </div> -->
-	                   <!-- <div class="form-group"> -->
-	                    <h4 id="myh4">Email</h4>
-	                    <input style="width:20%;" type="email" class="form-control" placeholder="Email" name="email">
-	                  <!-- </div> -->
-	                  <!-- <div class="form-group"> -->
-	                    <h4 id="myh4">Password</h4>
-	                    <input style="width:20%;" type="password" class="form-control" placeholder="Password" name="password">
-	                  <!-- </div> -->
-	                  <!-- <div class="form-group"> -->
-	                    <h4 id="myh4">Confirm Password</h4>
-	                    <input style="width:20%;" type="password" class="form-control" placeholder="Password" name="password2">
-	                  </div>
-	                  <button style="margin-top: 25px;" type="submit" class="newbtn2">Submit</button>
-	                </form>
-	                <!-- //end -->
-	            </div>
-            </div>
-        </li>
-    </ul>
+    	                      {{#if error}}
+    	                        <div class="alert alert-danger" style="width: 30%;">{{error}}</div>
+    	                      {{/if}}
+    	                    </div>
+    	                </div>
+    	                <!-- //end -->
+    	                <form method="post" action="/users/register">
+    	                   <div>
+    	                    <h4 id="myh4">Name</h4>
+    	                    <input style="width:20%;" type="text" class="form-control" placeholder="Name" name="name">
+    	                  <!-- </div> -->
+    	                  <!-- <div class="form-group"> -->
+    	                    <h4 id="myh4">Username</h4>
+    	                    <input style="width:20%;" type="text" class="form-control" placeholder="Username" name="username">
+    	                  <!-- </div> -->
+    	                   <!-- <div class="form-group"> -->
+    	                    <h4 id="myh4">Email</h4>
+    	                    <input style="width:20%;" type="email" class="form-control" placeholder="Email" name="email">
+    	                  <!-- </div> -->
+    	                  <!-- <div class="form-group"> -->
+    	                    <h4 id="myh4">Password</h4>
+    	                    <input style="width:20%;" type="password" class="form-control" placeholder="Password" name="password">
+    	                  <!-- </div> -->
+    	                  <!-- <div class="form-group"> -->
+    	                    <h4 id="myh4">Confirm Password</h4>
+    	                    <input style="width:20%;" type="password" class="form-control" placeholder="Password" name="password2">
+    	                  </div>
+    	                  <button style="margin-top: 25px;" type="submit" class="newbtn2">Submit</button>
+    	                </form>
+    	                <!-- //end -->
+    	            </div>
+                </div>
+            </li>
+        </ul>
+    </div>
     <!-- //Slider -->
 </div>
